# webaz

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  README.zh-CN.md  SECURITY.md  eslint.config.mjs  foundry.toml  package-lock.json  package.json  playwright.config.ts  railway.toml  server.json  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dep-license-policy.md
contracts/: MerchantBondVault.sol  WebazEscrow.sol
db/: agent-gateway-limits.pg.sql  agent-gateway-replay.pg.sql  schema.pg.sql
docs/: ADMIN-COORDINATION-CONTRIBUTION-DESIGN.md  AGENT-GOVERNANCE.md  AGENT-READY-TASK-SPEC.md  ARBITRATION-PLAYBOOK.md  BRAND-GUIDE.md  CHARTER.md  CODE_OF_CONDUCT.md  COMPLIANCE-CROSS-BORDER-TAX.INTERNAL.md  CONTRACT-LOCK.json  CONTRIBUTION-SCORE-V1-DESIGN.md  CONTRIBUTOR-ENTRY-RELATIONSHIP-GRAPH-V1.md  CONTRIBUTOR-REWARD-FRAMEWORK.md  DCO.md  ECONOMIC-MODEL.md  ENGINEERING-PR-CONSTRAINTS.md  FUTURE-TASK-BOARD-V1-DESIGN.md  GITHUB-CONTRIBUTION-CREDENTIAL.md  GITHUB-CREDENTIAL-INGESTION-DESIGN.md  GOVERNANCE-LEADERBOARD-SPEC.md  GOVERNANCE-ONBOARDING.md  IDENTITY-CLAIM-DESIGN.md  INTEGRATOR.md  LEGAL-DISCLOSURES.md  META-RULES-FULL.md  META-RULES-LOCK.md  OPEN-SOURCE-FIRST-TASKS.md  PARTICIPATION-ATTRIBUTION-COMPLIANCE.md  PRIVACY-POLICY.md  PUBLIC-CONTRIBUTOR-ENTRY.md  README.md  REMOTE-MCP.md  REWARD-ENGINES-DECOUPLING.md  TERMS-OF-SERVICE.md  WHAT-IS-WEBAZ.md  WHITEPAPER.md  WHITEPAPER.zh-CN.md  agent-gateway-shadow-limiter-runbook.md  api-endpoints.md  meta-rules.yaml
electron/: .gitignore  README.md  main.js  package.json  preload.js
scripts/: agent-compat-matrix.mjs  agent-first-success.mjs  ai-triage.mjs  backfill-decline-contest-disputes.ts  backfill-demand-signal-quality.ts  (+380 more)
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: demo_agent.py
sdk/python/webaz/: __init__.py
(+719 files in other folders)
